--- a/app/test.css
+++ b/app/test.css
@@ -1,8 +1,3 @@
 .d {
-  color:#e76993;
-  transition: all 1s ease-in-out;
-  border-style: dotted;
-  background-position:center;
-  background-size:cover;
-  backface-visibility: hidden;
+  color:#86baff;
 }
